java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/OrigCreateMethodTest/testCreateConstructor1-hints.pass
Create Constructor CreateConstructor1(int) in org.netbeans.test.java.hints.CreateConstructor1
